Fix z-index hover bug

--- a/src/components/Tile.module.css
+++ b/src/components/Tile.module.css
@@ -13,14 +13,13 @@
 .tile:hover {
   box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.3), 0 0 0 4px #ff78a0,
     0 0 30px 5px rgba(0, 0, 0, 0.5);
+  cursor: move;
 }
 
 .muuri-item-dragging {
-  z-index: 3 !important;
-  box-shadow: none;
+  z-index: 3;
 }
 
 .muuri-item-releasing {
-  z-index: 3 !important;
-  box-shadow: none;
+  z-index: 3;
 }
